footer overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 
 body {
   margin:0;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -196,7 +197,7 @@ p {
   position: absolute;
   margin: 20px;
   right: -100px;
-  border-radius: 10%;
+  border-radius: 5%;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.8);
   transition: transform 0.5s;
 }
